--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.8",
     "react": "^18.3.1",
@@ -17,6 +20,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
+    "react-table": "^7.8.0",
+    "regenerator-runtime": "^0.14.1",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.12.2"
   },
@@ -24,6 +29,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
+    "@types/react-table": "^7.7.20",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
